portfolio with classes

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,46 @@
 </head>
 <body>
 
+   <div class="header">
+      <h1>Jim Armstrong</h1>
+      <h2>Group Product Marketing Manager</h2>
+      <div class="tagline">
+         <h3>Learn more about me...</h3>
+         <p>
+            I'm a builder and grower. I love to build things from scratch from various media including wood, electronic bits, plant seeds, food. The process of combining an idea with some raw materials to create something tangible is exciting to me.
+         </p>
+      </div>
+      <div class="skills">
+         <h3>My skills</h3>
+         <p>
+            I enjoy learning to code (currently working on front-end stuff like Angular), building things, and growing and cooking things.
+         </p>
+         <ul>
+            <li>
+               HTML
+            </li>
+            <li>
+               Carpentry
+            </li>
+            <li>
+               Gardening
+            </li>
+         </ul>
+      </div>
+      <div class="contact">
+         <h3>Drop me a line...</h3>
+         <p>
+            <a href="https://twitter.com/jdarmstro">@JDArmstro</a> on Twitter<br />
+            <a href="mailto:jim@boscatizo.tools">jim@boscatizo.tools</a><br />
+         </p>
+      </div>
+   </div>
+
   <div class="container">
     <h1>jQuery Badges</h1>
-    <div id="badges"></div>
+    <div id="badges" >
+   
+    </div>
   </div>
 
 
